Bug #55042 valgrind reports error in best_access_path when running subquery_mat_all

The code was using loose_scan_pos, even though it was explicitly set to invalid.